# jaxtransform3d

./: .coveragerc  .gitignore  COPYING  README.md  api.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  sg_execution_times.html
_apidoc/: jaxtransform3d.rotations.apply_matrix.html  jaxtransform3d.rotations.apply_quaternion.html  jaxtransform3d.rotations.compact_axis_angle_from_matrix.html  jaxtransform3d.rotations.compact_axis_angle_from_quaternion.html  jaxtransform3d.rotations.compose_matrices.html  jaxtransform3d.rotations.compose_quaternions.html  jaxtransform3d.rotations.left_jacobian_SO3.html  jaxtransform3d.rotations.left_jacobian_SO3_inv.html  jaxtransform3d.rotations.left_jacobian_SO3_inv_series.html  jaxtransform3d.rotations.left_jacobian_SO3_series.html  jaxtransform3d.rotations.matrix_from_compact_axis_angle.html  jaxtransform3d.rotations.matrix_inverse.html  jaxtransform3d.rotations.norm_matrix.html  jaxtransform3d.rotations.norm_quaternion.html  jaxtransform3d.rotations.quaternion_conjugate.html  jaxtransform3d.rotations.quaternion_from_compact_axis_angle.html  jaxtransform3d.rotations.robust_polar_decomposition.html  jaxtransform3d.transformations.apply_dual_quaternion.html  jaxtransform3d.transformations.apply_transform.html  jaxtransform3d.transformations.compose_dual_quaternions.html  jaxtransform3d.transformations.compose_transforms.html  jaxtransform3d.transformations.create_transform.html  jaxtransform3d.transformations.dual_quaternion_from_exponential_coordinates.html  jaxtransform3d.transformations.dual_quaternion_quaternion_conjugate.html  jaxtransform3d.transformations.dual_quaternion_squared_norm.html  jaxtransform3d.transformations.exponential_coordinates_from_dual_quaternion.html  jaxtransform3d.transformations.exponential_coordinates_from_transform.html  jaxtransform3d.transformations.norm_dual_quaternion.html  jaxtransform3d.transformations.transform_from_exponential_coordinates.html  jaxtransform3d.transformations.transform_inverse.html
_auto_examples/: index.html  sg_execution_times.html
_auto_examples/autodiff/: autodiff_pointcloud_matching.html  autodiff_similarity.html  index.html  plot_pointcloud_matching.html  sg_execution_times.html
_auto_examples/plots/: index.html  plot_polar_decomposition.html  plot_sclerp.html  sg_execution_times.html
_auto_examples/vis/: index.html  sg_execution_times.html  vis_inverse_kinematics.html
_downloads/180940286134f348633af11f2d427d14/: plot_pointcloud_matching.py
_downloads/2b52d601af1bf845eb6833863f41237d/: plot_sclerp.ipynb
_downloads/40b10bed0ba3b7cd4184305a47a2fdab/: plot_polar_decomposition.ipynb
_downloads/578418019e4039bd8c64a3ec2c6f0e3b/: autodiff_similarity.ipynb
_downloads/a20a7ea4d3c95887506fcd110f713f0e/: vis_inverse_kinematics.ipynb
_downloads/b7eea4d154fef7e25ac3dd1045bcc4e6/: vis_inverse_kinematics.py
_downloads/c5cadddf8e9dd95a2d8e7ac0c04365d3/: plot_pointcloud_matching.ipynb
_downloads/c661cb917fe5663138aa306bff7d39c1/: autodiff_pointcloud_matching.ipynb
_downloads/d1a33c5d2c3d5abdbdfc6cacf73f6fdf/: plot_polar_decomposition.py
_modules/: index.html
_sources/: api.rst.txt  index.rst.txt  sg_execution_times.rst.txt
_sources/_apidoc/: jaxtransform3d.rotations.apply_matrix.rst.txt  jaxtransform3d.rotations.apply_quaternion.rst.txt  jaxtransform3d.rotations.compact_axis_angle_from_matrix.rst.txt  jaxtransform3d.rotations.compact_axis_angle_from_quaternion.rst.txt  jaxtransform3d.rotations.compose_matrices.rst.txt  jaxtransform3d.rotations.compose_quaternions.rst.txt  jaxtransform3d.rotations.left_jacobian_SO3.rst.txt  jaxtransform3d.rotations.left_jacobian_SO3_inv.rst.txt  jaxtransform3d.rotations.left_jacobian_SO3_inv_series.rst.txt  jaxtransform3d.rotations.left_jacobian_SO3_series.rst.txt  jaxtransform3d.rotations.matrix_from_compact_axis_angle.rst.txt  jaxtransform3d.rotations.matrix_inverse.rst.txt  jaxtransform3d.rotations.norm_matrix.rst.txt  jaxtransform3d.rotations.norm_quaternion.rst.txt  jaxtransform3d.rotations.quaternion_conjugate.rst.txt  (+15 more)
_sources/_auto_examples/: index.rst.txt
benchmarks/: benchmark_matrix_from_compact_axis_angle.py
data/: robot_with_visuals.urdf
examples/: README.rst
(+57 files in other folders)
