[project]
name = "jaxtransform3d"
dynamic = ["version"]
description = "3D transformations for JAX"
readme = "README.md"
maintainers = [
    {name = "Alexander Fabisch", email = "afabisch@googlemail.com"},
]
dependencies = [
    "jax",
    "chex",
]
requires-python = ">= 3.12"
license = {file = "COPYING"}
classifiers=[
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
]

[project.optional-dependencies]
doc = [
    "sphinx",
    "sphinx-gallery",
    "pydata-sphinx-theme",
    "numpydoc",
    "numpy",
    "matplotlib",
    "pytransform3d",
]
examples = [
    "matplotlib",
    "numpy",
    "pytransform3d",
]
tests = [
    "pytest",
    "pytest-cov",
    "pytransform3d",
    "numpy",
    "ruff",
    "black",
    "mypy",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "jaxtransform3d.__version__"}

[tool.black]
line-length = 88
target-version = ["py312", "py313"]
include = '''
/(
      jaxtransform3d
    | examples
)\/.*\.pyi?$
'''
exclude = '''
/(
      .git
    | __pycache__
    | doc
    | venv
    | build
    | dist
)/
'''

[tool.ruff]
line-length = 88
target-version = "py312"
include = [
    "src/jaxtransform3d/**/*.py",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
# all rules can be found here: https://beta.ruff.rs/docs/rules/
ignore=[
    "SIM108",  # Use ternary operator
]

[tool.ruff.format]
quote-style = "double"
